--- a/SMM/SMM.csproj
+++ b/SMM/SMM.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -30,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ScintillaNET">
@@ -72,6 +74,12 @@
     <Compile Include="Addons\Addon_BaseProject_Controls\TextEditor.Designer.cs">
       <DependentUpon>TextEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Addons\Addon_BaseProject_Controls\VTFViewer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Addons\Addon_BaseProject_Controls\VTFViewer.Designer.cs">
+      <DependentUpon>VTFViewer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Addons\Addon_BaseSession.cs" />
     <Compile Include="Addons\MenuStripIcons.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -94,6 +102,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="VtfLib.cs" />
     <EmbeddedResource Include="Addons\Addon_BaseAbout_Controls\AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Addons\Addon_BaseProject_Controls\TextEditor.resx">
       <DependentUpon>TextEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Addons\Addon_BaseProject_Controls\VTFViewer.resx">
+      <DependentUpon>VTFViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Addons\MenuStripIcons.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -187,6 +199,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\puzzle--minus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\alpha_checkers.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\alpha_checkers1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
