--- a/SMM/SMM.csproj
+++ b/SMM/SMM.csproj
@@ -145,6 +145,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="readme.md" />
     <None Include="SMM.licenseheader" />
   </ItemGroup>
   <ItemGroup>
