--- a/SMM/SMM.csproj
+++ b/SMM/SMM.csproj
@@ -67,6 +67,12 @@
       <DependentUpon>PluginsBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Addons\Addon_BaseContextMenu.cs" />
+    <Compile Include="Addons\Addon_BaseContextMenu_Controls\AddFileDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Addons\Addon_BaseContextMenu_Controls\AddFileDialog.Designer.cs">
+      <DependentUpon>AddFileDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Addons\Addon_BaseMenuStripControls.cs" />
     <Compile Include="Addons\Addon_BasePluginLoader.cs" />
     <Compile Include="Addons\Addon_BaseProject.cs" />
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Addons\Addon_BaseAbout_Controls\PluginsBox.resx">
       <DependentUpon>PluginsBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Addons\Addon_BaseContextMenu_Controls\AddFileDialog.resx">
+      <DependentUpon>AddFileDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Addons\Addon_BaseProject_Controls\TextEditor.resx">
       <DependentUpon>TextEditor.cs</DependentUpon>
